# smollang

./: .gitignore  Cargo.toml  MANIFEST.md  README.md  cspell.json
.github/: copilot-instructions.md
ast/src/: lib.rs  pretty_print.rs  span.rs
bytecode/src/: assembly.rs  constant.rs  constant_address.rs  instruction.rs  lib.rs  memory_address.rs  op.rs  program_address.rs  program_offset.rs  value.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  standard_io.rs  styles.rs
cli/src/pretty_print/: assembly_pretty_print.rs  ast_implementations.rs  helpers.rs  memory_pretty_print.rs  mod.rs
compiler/: Cargo.toml
compiler/src/: compiler.rs  globals.rs  lib.rs  locals.rs  symbol.rs
examples/: armstrong_check_function.smol  combinations_ncr.smol  count_number_digits.smol  echo.smol  even_odd_check.smol  factorial_iterative.smol  fast_exponentiation.smol  fibonacci_iterative.smol  find_max_min_in_array.smol  find_missing_number.smol  from_manifest.smol  greatest_common_divisor.smol  hello_world.smol  is_palindrome.smol  largest_of_three_numbers.smol  leap_year_calculator.smol  least_common_multiple.smol  modular_exponentiation.smol  multiplication_table.smo  prime_check_function.smol  recursive_gcd_function.smol  reverse_a_number.smol  simple_calculator.smol  simple_repl.smol  sum_of_digits_recursive.smol  sum_of_numbers.smol  sum_of_two_numbers.smol  swap_variables.smol  temperature_converter.smol
parser/: .pest  Cargo.toml  README.md
parser/src/: into_ast_span.rs  lib.rs  parse_string_to_program_ast.rs
runtime/: Cargo.toml
vm/: Cargo.toml
vm/src/: lib.rs  (+8 more)
(+124 files in other folders)
