[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# internal
ast = { path = "../ast" }
parser = { path = "../parser" }
compiler = { path = "../compiler" }
vm = { path = "../vm" }
bytecode = { path = "../bytecode" }

# external
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo"] }
colored = "3.1.1"
